--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,6 @@
     [theme]
     primaryColor = '#7792E3'
     backgroundColor = '#f5f5f5'
+    secondaryBackgroundColor = '#B9F1C0'
+    textColor = '#FFFFFF'
+    font = "sans serif"
