--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,5 @@
     [theme]
     primaryColor = '#7792E3'
     backgroundColor = '#f5f5f5'
+    secondaryBackgroundColor = '#B9F1C0'
     font = "sans serif"
