--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,6 @@
     [theme]
-    primaryColor = '#7792E3'
-    backgroundColor = '#f5f5f5'
-    secondaryBackgroundColor = '#B9F1C0'
-    font = "sans serif"
+    primaryColor ='#7792E3'
+    backgroundColor ='#f5f5f5'
+    secondaryBackgroundColor ='#B9F1C0'
+    textColor='#262730'
+    font ='sans serif'
